--- a/Funções/projetoContador/index.html
+++ b/Funções/projetoContador/index.html
@@ -16,11 +16,14 @@
             <p>Digite um número entre 1 e 100. <input type="number" min="1" max="100" class="num" id="num"> 
             <input type="button" value="Adicionar" onclick="clique()"></p>
         </div>
-            <select name="add" id="seltab" size="5">
-                <option>Digite um número acima!</option>
+            <select name="add" id="flist" size="6">
             </select><br><br>
             <input type="button" value="Finalizar" onclick="finalizar()">
+
+        <div id="res">
+        </div>
     </section>
+
     <footer>&copy; Roberth</footer>
 
     <script src="script.js"></script>
